# primrose

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  MODULE.bazel  WORKSPACE  compile_commands.sh  setup_clang.sh
bazel/: BUILD  cc_modify.py  repository.bzl
prim/encoding/: BUILD  bcd.cc  bcd.h  bcd_test.cc
prim/file/: BUILD  file.cc  file.h  file_test.cc
prim/numeric/: BUILD  int24.cc  int24.h  int24_test.cc
prim/strings/: BUILD  color.h  color_test.cc
